src/test/deca/syntax/valid/avecObjet/classe.deca
// Description:
//    Programme utilisant class .
//
// Resultats:
//    class
//    fields
//    methodes
//    main
// Historique:
//    cree le 12/01/2024
class A {
    int a;
    int summ(int b,int c){
        print(b+1);
        return a;
    }
}
class B extends A{
    int b;
}
{
    A anass = new A();
    anass.a = 1;
    anass.summ(a, b);
}