src/test/deca/syntax/invalid/sansObjet/interrogation.deca
// Description:
//    tests de programme incorrect lexicalement (usage de ? hors STRING)
//
// Resultats:
//    ligne 12 : token recognition error at: '?'
//
// Historique:
//    cree le 01/01/2024

{
  int a = 5;
  a = 6 ? ;
}